PB-265: Video background for Banner - fix video overlay z-index Safari issue

--- a/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/row/_default.less
+++ b/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/row/_default.less
@@ -35,6 +35,7 @@
     position: absolute;
     right: 0;
     top: 0;
+    -webkit-transform: translate3d(0,0,0);
     z-index: -99;
 }
 
