--- a/app/code/Magento/PageBuilder/view/base/web/css/source/jarallax/_jarallax.less
+++ b/app/code/Magento/PageBuilder/view/base/web/css/source/jarallax/_jarallax.less
@@ -37,6 +37,7 @@
             position: absolute;
             right: 0;
             top: 0;
+            -webkit-transform: translate3d(0,0,0);
             z-index: -99;
         }
     }
